using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class ConstString : MonoBehaviour
{
    //Character
    public const string swordParaname = "Sword";
    public const string powerUpParaname = "Power";
    public const string defaultAttack = "Attack";
    public const string moveParaname = "Move";
    public const string kickParaname = "Kick";
    public const string dieParaname = "Die";

    //Enemy add++
    public const string attackParaname = "Attack";
    public const string hitParaname = "Hit";

    //Tag
    public const string groundTag = "Ground";
    public const string spearMan = "Spear";
    public const string visionTag = "Vision";
    public const string playerTag = "Player";
}
